🔧 Added PORT binding for Render deployment

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/ganesha
+MONGO_URI=mongodb+srv://ranjith20061917:HLIiHNZXVOwGKEoA@cluster0.elu8umj.mongodb.net/ganesha?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=mySecretKey123
+
